8282662: Use List/Set.of() factory methods to save memory